syntax = "proto3";

package kvgo;

option go_package = "./kvgo";

service Rafter {
    rpc AppendEntry (AppendEntryRequest) returns (AppendEntryResponse) {}
    rpc Vote (VoteRequest) returns (VoteResponse) {}
}

message AppendEntryRequest{
    int32 id = 1;
    int32 receiver_id = 2;
    uint64 term = 3;
    uint64 prev_log_term = 4;
    int32 prev_log_index = 5;
    repeated LogEntry entries = 6;
    int32 leader_commit = 7;
}

message LogEntry {
    uint64 term = 1;
	Command command = 2;
}

message Command {
    int32 value = 1;
}

message AppendEntryResponse{
    int32 receiver_id = 1;
    uint64 request_in_term = 2;
	int32 match_index = 3;
	uint64 term = 4;
	bool success = 5;
}

message VoteRequest{
    int32 receiver_id = 1;
    uint64 request_in_term = 2;
	int32 candidate_id = 3;  
	uint64 prev_log_term = 4;
	int32 prev_log_index = 5;
}

message VoteResponse{
    int32 receiver_id = 1;   
	uint64 request_in_term = 2; 
	uint64 term = 3;          
	bool vote_granted = 4;   
}